[gd_scene load_steps=24 format=3 uid="uid://dvgu1pbb6ijum"]

[ext_resource type="Script" uid="uid://c0l3q1ssugw37" path="res://singletons/TagMenu.gd" id="1_iq6s2"]
[ext_resource type="Texture2D" uid="uid://c6p7xunmgl2r4" path="res://assets/ui/dialogue_box_face.png" id="1_svcbd"]
[ext_resource type="Texture2D" uid="uid://p3if1jfgpk6k" path="res://assets/player/$RAINY_TAG.png" id="2_83y3w"]
[ext_resource type="AudioStream" uid="uid://b538uh5i8j26q" path="res://music/sfx/DW_T_HIKIKO_TAG.ogg" id="2_l4vsh"]
[ext_resource type="Texture2D" uid="uid://b6tl13knaqt6l" path="res://assets/player/$HIKIKO_TAG.png" id="2_qf31l"]
[ext_resource type="Texture2D" uid="uid://b720ntgiwtjcd" path="res://assets/ui/SELECT_box.png" id="2_vlkdy"]
[ext_resource type="Shader" uid="uid://c1ois1rqgc3h1" path="res://assets/styles/grease_pencil_noise.gdshader" id="3_6mqqt"]
[ext_resource type="AudioStream" uid="uid://bobi2205gu2wn" path="res://music/sfx/DW_T_RAINY_TAG.ogg" id="4_475qe"]
[ext_resource type="AudioStream" uid="uid://b5dfoyfgm6eh3" path="res://music/sfx/DW_T_STRANGER_TAG.ogg" id="5_475qe"]
[ext_resource type="Texture2D" uid="uid://cs3exm3r5xwrj" path="res://assets/player/$STRANGER_TAG.png" id="5_dw4km"]
[ext_resource type="AudioStream" uid="uid://bwoppytc5rf5a" path="res://music/sfx/DW_T_STRANGER_ALT_TAG.ogg" id="6_xpp6v"]
[ext_resource type="AudioStream" uid="uid://utvi2mn4yhhn" path="res://music/sfx/SE_TAG.ogg" id="7_jml0n"]
[ext_resource type="Shader" uid="uid://dq7hmwm8ngcw8" path="res://assets/styles/blur_background.gdshader" id="9_eduen"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e3lhp"]
resource_local_to_scene = true
shader = ExtResource("9_eduen")
shader_parameter/blur_amount = 1.9970000948575
shader_parameter/darkness = 0.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vlkdy"]
texture = ExtResource("1_svcbd")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iq6s2"]
shader = ExtResource("3_6mqqt")
shader_parameter/noise_scale = 0.00400000019
shader_parameter/noise_frequency = 15.0
shader_parameter/step_fps = 8.0
shader_parameter/position_randomness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6mqqt"]
shader = ExtResource("3_6mqqt")
shader_parameter/noise_scale = 0.0050000002375
shader_parameter/noise_frequency = 15.0
shader_parameter/step_fps = 8.0
shader_parameter/position_randomness = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_83y3w"]
texture = ExtResource("2_vlkdy")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jml0n"]
shader = ExtResource("3_6mqqt")
shader_parameter/noise_scale = 0.0070000003325
shader_parameter/noise_frequency = 15.0
shader_parameter/step_fps = 8.0
shader_parameter/position_randomness = 1.0

[sub_resource type="Animation" id="Animation_e3lhp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Member_WHO2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-60, -58.694443)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Member_WHO:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-58, -58.694443)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Leader_tag:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-61, -57)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Tag_WHO:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-61, 15)]
}

[sub_resource type="Animation" id="Animation_l4vsh"]
resource_name = "open"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Member_WHO2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-206, -58.694443), Vector2(-60, -58.694443)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Member_WHO:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(80, -58.694443), Vector2(-58, -58.694443)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Leader_tag:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-61, -106), Vector2(-61, -57)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Tag_WHO:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-61, 65), Vector2(-61, 15)]
}

[sub_resource type="Animation" id="Animation_eduen"]
resource_name = "open"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Member_WHO2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-60, -58.694443), Vector2(-206, -58.694443)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Member_WHO:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-58, -58.694443), Vector2(80, -58.694443)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Leader_tag:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-61, -57), Vector2(-61, -106)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Tag_WHO:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-61, 15), Vector2(-61, 65)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l4vsh"]
_data = {
&"RESET": SubResource("Animation_e3lhp"),
&"closed": SubResource("Animation_l4vsh"),
&"open": SubResource("Animation_eduen")
}

[node name="TagMenu" type="CanvasLayer"]
script = ExtResource("1_iq6s2")

[node name="SFX" type="Node" parent="."]

[node name="hikiko_tagged_rainy" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("2_l4vsh")
volume_db = -13.32

[node name="tag_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_jml0n")
volume_db = -16.488

[node name="rainy_tagged_hikiko" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_475qe")
volume_db = -13.064

[node name="hikiko_tagged_stranger" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_475qe")
volume_db = -3.138

[node name="rainy_tagged_stranger" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_xpp6v")
volume_db = -5.061

[node name="BlurBackground" type="ColorRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_e3lhp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Member_WHO2" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -58.694443
offset_right = 56.0
offset_bottom = 58.694473
grow_horizontal = 0
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/Member_WHO2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vlkdy")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Member_WHO2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Portrait" type="TextureRect" parent="Control/Member_WHO2/PanelContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_iq6s2")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_dw4km")

[node name="Member_WHO" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -58.694443
offset_right = 60.0
offset_bottom = 58.694473
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/Member_WHO"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vlkdy")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Member_WHO/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Portrait" type="TextureRect" parent="Control/Member_WHO/PanelContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_6mqqt")
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_qf31l")

[node name="Leader_tag" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_top = -57.0
offset_right = 61.0
offset_bottom = -16.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_83y3w")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Leader_tag"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="LEADER" type="Label" parent="Control/Leader_tag/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "LEADER"

[node name="WHO_LEADER" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -57.84722
offset_right = 61.0
offset_bottom = 57.84723
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/WHO_LEADER"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vlkdy")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/WHO_LEADER/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Portrait" type="TextureRect" parent="Control/WHO_LEADER/PanelContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_jml0n")
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("2_83y3w")

[node name="Tag_WHO" type="PanelContainer" parent="Control"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = 15.0
offset_right = 61.0
offset_bottom = 56.000008
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_83y3w")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Tag_WHO"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="WHO?" type="Label" parent="Control/Tag_WHO/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "TAG WHO?"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l4vsh")
}
speed_scale = 0.755
